# Go-IT-DZ

./: README.md
GOIT_AC1/: Autocheck_1_1.py  Autocheck_1_14.py  Autocheck_1_2.py  Autocheck_1_3.py  Autocheck_1_6.py  Autocheck_1_9.py
GOIT_AC10/: Autocheck_10_1.py  Autocheck_10_10.py  Autocheck_10_11.py  Autocheck_10_12.py  Autocheck_10_13.py  Autocheck_10_15.py  Autocheck_10_16.py  Autocheck_10_2.py  Autocheck_10_5.py  Autocheck_10_6.py  Autocheck_10_9.py
GOIT_AC11/: Autocheck_11_3.py  Autocheck_11_7.py  Autocheck_12_3.py  Autocheck_12_9.py
GOIT_AC12/: Autocheck_12_4.py  Autocheck_12_5.py  Autocheck_12_6.py  Autocheck_12_7.py
GOIT_AC2/: Autocheck_2_10.py  Autocheck_2_12.py  Autocheck_2_15.py  Autocheck_2_3.py  Autocheck_2_5.py  Autocheck_2_9.py
GOIT_AC3/: Autocheck_3_10.py  Autocheck_3_11.py  Autocheck_3_4.py  Autocheck_3_5.py  Autocheck_3_6.py  Autocheck_3_8.py
GOIT_AC4/: Autocheck_4_11.py  Autocheck_4_12.py  Autocheck_4_14.py  Autocheck_4_3.py  Autocheck_4_5.py  Autocheck_4_9.py
GOIT_AC5/: Autocheck_5_10.py  Autocheck_5_12.py  Autocheck_5_13.py  Autocheck_5_15.py  Autocheck_5_8.py  Autocheck_5_9.py
GOIT_AC6/: Autocheck_6_12.py  Autocheck_6_13.py  Autocheck_6_14.py  Autocheck_6_3.py
GOIT_AC7/: Autocheck_7_1.py  Autocheck_7_10.py  Autocheck_7_12.py  Autocheck_7_17.py  Autocheck_7_6.py  Autocheck_7_8.py  Autocheck_7_9.py
GOIT_AC8/: Autocheck_8_1.py  Autocheck_8_3.py  Autocheck_8_4.py  Autocheck_8_6.py  Autocheck_8_9.py
GOIT_AC9/: Autocheck_9_1.py  Autocheck_9_10.py  (+7 more)
Python web 2.0/Module 2/: pyproject.toml
Python web 2.0/Module 2/bot/: Dockerfile
(+102 files in other folders)
